Fix unsopported gap

--- a/components/boton-categoria.module.scss
+++ b/components/boton-categoria.module.scss
@@ -1,10 +1,10 @@
 .container{
-  display: flex;
-  gap: 24px;
+  display: flex; 
   align-items: center;
   margin-bottom: 25px;
 
   h3{
     color: var(--grey--800);
+    margin-left: 24px;
   }
 }
