--- a/pages/categorias/categorias.module.scss
+++ b/pages/categorias/categorias.module.scss
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 12px;
 
   img{
     width: 24px;
     height: 24px;
+    margin-bottom: 14px;
   }
 
   p{
